# fps

./: .gitmodules  CMakeLists.txt  README.md  thing.sh
Headers/: camera.hpp  glitter.hpp  level.hpp  mesh.hpp  player.hpp  shader.hpp  texture.hpp
Shaders/: main.frag  main.vert  main_instanced.frag  main_instanced.vert
Sources/: level.cpp  main.cpp  mesh.cpp  player.cpp  shader.cpp
